<resources>
    <string name="app_name">DocAppointment</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="str4">HEART</string>
    <string name="str5">SKIN</string>
    <string name="str6">NOSE</string>
    <string name="str7">EAR</string>
    <string name="str8">GENERAL</string>

    <string name="select_doctor">Select Doctor</string>
</resources>