<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/my_drawer_layout"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textAlignment="center"
                android:text="Want To Talk With Doctor ?"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textColor="@color/black"
                />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/patient"
                app:cardCornerRadius="30dp"
                android:elevation="20dp">

                <ImageView
                    android:layout_width="130dp"
                    android:layout_height="190dp"
                    android:layout_marginLeft="250dp"
                    android:paddingRight="5dp"
                    android:src="@drawable/doctor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:text="Consult Online With Doctor"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    />

                <Button
                    android:layout_width="170dp"
                    android:layout_height="60dp"
                    android:layout_marginTop="110dp"
                    android:layout_marginLeft="30dp"
                    android:text="Start Chat"
                    android:textSize="20sp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textColor="@color/patient"
                    android:background="@drawable/roundbutton"/>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Find Doctors With Specialist"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                />

            <HorizontalScrollView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginLeft="20dp">

                    <Button
                        android:id="@+id/throatBtn"
                        android:layout_width="94dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/scrollbutton"
                        android:backgroundTint="@color/doc"
                        android:padding="1dp"
                        android:text="@string/str8"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/heartBtn"
                        android:layout_width="94dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/scrollbutton"
                        android:backgroundTint="@color/doc"
                        android:padding="1dp"
                        android:text="@string/str4"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/skinBtn"
                        android:layout_width="94dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/scrollbutton"
                        android:backgroundTint="@color/doc"
                        android:padding="1dp"
                        android:text="@string/str5"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/noseBtn"
                        android:layout_width="94dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/scrollbutton"
                        android:backgroundTint="@color/doc"
                        android:padding="1dp"
                        android:text="@string/str6"
                        android:textColor="#fff"
                        android:textSize="16sp" />

                    <Button
                        android:id="@+id/hairBtn"
                        android:layout_width="94dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/scrollbutton"
                        android:backgroundTint="@color/doc"
                        android:padding="1dp"
                        android:text="@string/str7"
                        android:textColor="#fff"
                        android:textSize="16sp" />





                </LinearLayout>

            </HorizontalScrollView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="20dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="215dp"
                    android:backgroundTint="@color/white"
                    android:elevation="20dp"
                    android:background="@drawable/corner"
                    >

                    <ImageButton
                        android:id="@+id/makeAppointment"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center"
                        android:background="@drawable/appointmentview"                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Make Appointment"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="190dp"
                        />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="200dp"
                    android:layout_height="215dp"
                    android:backgroundTint="@color/white"
                    app:cardCornerRadius="10dp"
                    android:elevation="10dp"
                    android:layout_marginLeft="10dp"
                    >

                    <ImageButton
                        android:id="@+id/ViewAppointmentImageButton"
                        android:layout_width="180dp"
                        android:layout_height="180dp"
                        android:layout_gravity="center"
                        android:background="@drawable/appointment"                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="View Appointment"
                        android:textSize="15dp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:textAlignment="center"
                        android:layout_marginTop="190dp"
                        />

                </androidx.cardview.widget.CardView>


            </LinearLayout>


    </LinearLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_items" />

</androidx.drawerlayout.widget.DrawerLayout>